fix: better spacing for the alert box, when activated

--- a/umap/static/umap/content.css
+++ b/umap/static/umap/content.css
@@ -169,7 +169,7 @@ h2.tabs a:hover {
     background-color: #c0392b;
     color: #efefef;
     margin-top: 0;
-    padding: 14px 0;
+    padding: 1em;
 }
 .demo-instance-warning .row {
     margin-top: 0;
